# agentic-ai-may-2026-cohort

./: .gitignore  CLAUDE.md  README.md  ruff.toml
session1/: README.md
session1/prompts/: README.md
session1/prompts/scripts/: 5.react-prompt.md  6.react-input.json
session1/stockresearch/: README.md
session1/stockresearch/src/stockresearch/: crew.py  main.py
session2/: README.md
session2/1. stockresearch_single_agent/: .env.template
session2/1.stockresearch/: .env.template  README.md  pyproject.toml
session2/1.stockresearch/src/stockresearch/: agentCoreHandler.py  crew_v1.py  crew_v1_with_planning.py  crew_v2.py  crew_v3.py
session2/1.stockresearch/src/stockresearch/tools/: stock_tool.py
session2/1.stockresearch/src/stockresearch/utils/: bedrock_patches.py  crew_executor.py
session2/2.deepresearch/: README.md
session2/2.stockresearch_infra/: README.md  app.py  generateRequirements.sh
session2/2.stockresearch_infra/src/: AgentCoreStack.py
session2/2.stockresearch_multi_agent/: .env.template  README.md  pyproject.toml
session2/2.stockresearch_multi_agent/src/stockresearch/: agentCoreHandler.py  llm_otel_listener.py  main.py
session2/2.stockresearch_multi_agent/src/stockresearch/tools/: date_tool.py
session2/3.deepresearch/: .env.template  README.md  pyproject.toml
session2/3.deepresearch/src/deepresearch/: crew.py  flow.py  main.py
session2/3.deepresearch/src/deepresearch/utils/: crew_executor.py  llm_otel_listener.py
session2/3.stockresearch_infra/: README.md
session2/3.stockresearch_infra/cdk.out/: StockResearchAgentCore.assets.json  StockResearchAgentCore.template.json  manifest.json  tree.json
session2/3.stockresearch_infra/cdk.out/asset.050a0d7e2be503b1965e831d1beeaff80b2f3d987d0e9f150c85dd196f66eb1c.stockresearch/: DockerFile
session2/3.stockresearch_infra/cdk.out/asset.050a0d7e2be503b1965e831d1beeaff80b2f3d987d0e9f150c85dd196f66eb1c.stockresearch/src/stockresearch/: crewWithPlanner.py  main.py
session2/3.stockresearch_infra/cdk.out/asset.2ad68bb4cc27e87cdd059225d8b0c8b9baebf47d1fd6cea8f7bef0d5276f7b24.stockresearch/src/stockresearch/: crew.py  crewMultiAgent.py  crewWithPlanner.py
session2/3.stockresearch_infra/cdk.out/asset.3e30e401fe7f0af0f2c49763aa5bcc6c3d66d4b2e268bded72c4b57dc7bc6dc3.stockresearch/src/stockresearch/: agentCoreHandler.py
session2/3.stockresearch_infra/cdk.out/asset.53d94c5145947282052fe2be1dc678d1479f3a43da8dbc6b3b20150e69b80d98.stockresearch/src/stockresearch/: crewWithPlanner.py
session2/3.stockresearch_infra/cdk.out/asset.a2cc57023f7bbbf4808d183b043e7a22ce4bcf787487afe9ec4490f2a7b3799c.stockresearch/: README.md  pyproject.toml
session2/3.stockresearch_infra/cdk.out/asset.a2cc57023f7bbbf4808d183b043e7a22ce4bcf787487afe9ec4490f2a7b3799c.stockresearch/src/stockresearch/: crew.py  crewMultiAgent.py
session2/3.stockresearch_infra/cdk.out/asset.a554e8108b8f7125805acf4088c16a0d518f1d3190a357dacfa3242f814b3adf.stockresearch/: .env.template
session2/3.stockresearch_infra/cdk.out/asset.a554e8108b8f7125805acf4088c16a0d518f1d3190a357dacfa3242f814b3adf.stockresearch/src/stockresearch/: agentCoreHandler.py  bedrock_patches.py  crew.py  crewMultiAgent.py  main.py
session2/3.stockresearch_infra/cdk.out/asset.a83c6e5ff3b94a73ad113fcd7f02e36e7e584eab50638d4d5b2fb209b37609de.stockresearch/: Dockerfile
session2/3.stockresearch_infra/cdk.out/asset.a83c6e5ff3b94a73ad113fcd7f02e36e7e584eab50638d4d5b2fb209b37609de.stockresearch/src/stockresearch/: agentCoreHandler.py  llm_otel_listener.py
session2/3.stockresearch_infra/cdk.out/asset.d3a09b7419b6f0cafa7b4d8a7eab269ed1b0cc50c16804c1d5f37cf1cdd31a60.stockresearch/: pyproject.toml
session2/3.stockresearch_infra/cdk.out/asset.d3a09b7419b6f0cafa7b4d8a7eab269ed1b0cc50c16804c1d5f37cf1cdd31a60.stockresearch/src/stockresearch/: agentCoreHandler.py  main.py
session2/4.stockresearch_infra/: app.py  pyproject.toml
session2/4.stockresearch_infra/src/: AgentCoreStack.py
session3/: README.md
session3/1.employeepolicy/: .env.template
session3/1.employeepolicy/src/employeepolicy/: crew.py
session3/1.knowledgebase/: README.md  eval_data_set.jsonl
session3/2.employeepolicy/: .env.template  README.md  pyproject.toml
session3/2.employeepolicy/src/employeepolicy/: bedrock_patches.py  crew.py  main.py
session3/2.employeepolicy/src/employeepolicy/utils/: crew_executor.py
session4/: README.md
session4/1.atlassian_mcp_server/: README.md
session4/2.jira_management/: .env.template  README.md  pyproject.toml
session4/2.jira_management/src/jiramanagement/: crew.py  crew_v1.py  crew_v2.py  main.py
session4/2.jira_management/src/jiramanagement/utils/: bedrock_patches.py  crew_executor.py  llm_otel_listener.py
session5/: 1.A2A.md  README.md
session5/1.group-activity/project_1/: problem_statement.md
session5/2.deepresearch/: README.md
session5/2.deepresearch/src/deepresearch/: crew_parallel_pattern.py  crew_sequential_pattern.py
session5/2.deepresearch/src/deepresearch/utils/: crew_executor.py
session5/2.group-activity/project_2/: problem_statement.md
session5/2.group-activity/project_3/: problem_statement.md
session6/1.employee_chatbot/: .env.template  .gitignore  README.md  __init__.py  pyproject.toml
session6/1.employee_chatbot/src/employee_chatbot/: crew.py  main.py  tools.py
session6/1.employee_chatbot/src/employee_chatbot/utils/: memory.py
session6/1.employee_chatbot/test/: setup_deepeval.py  test_chatbot.py  test_multi_turn.py
session6/1.employee_chatbot/test/utils/: tool_tracker.py
