[project]
name = "stockresearch"
version = "0.1.0"
description = "stockResearch using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "boto3",
    "crewai[tools]",
    "langfuse>=3.5.0",
    "openinference-instrumentation-crewai>=0.1.13",
    "openinference-instrumentation-litellm",
    "opentelemetry-exporter-otlp-proto-http",
    "crewai",
    "openlit",
    "crewai_tools",
    "litellm",
    "yfinance>=1.3.0",
    "tavily-python",
    "bedrock-agentcore-starter-toolkit>=0.3.9",
    "bedrock-agentcore>=1.9.1",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-exporter-otlp>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
]

[project.scripts]
stockresearch = "stockresearch.main:run"
run_crew = "stockresearch.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
