[project]
name = "deepresearch"
version = "0.1.0"
description = "deepresearch using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "boto3",
    "crewai[anthropic,tools]",
    "langfuse>=3.5.0",
    "openinference-instrumentation-crewai>=0.1.13",
    "openinference-instrumentation-litellm",
    "opentelemetry-exporter-otlp-proto-http",
    "crewai",
    "openlit",
    "crewai_tools",
    "litellm",
    "tavily-python>=0.7.23",
]

[project.scripts]
deepresearch = "deepresearch.main:run"
run_crew = "deepresearch.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
