[project]
name = "stockresearch"
version = "0.1.0"
description = "stockResearch using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "boto3",
    "crewai[anthropic,tools]",
    "langfuse>=3.5.0",
    "openinference-instrumentation-crewai>=0.1.13",
    "openinference-instrumentation-litellm",
    "opentelemetry-exporter-otlp-proto-http",
    "crewai",
    "openlit",
    "crewai_tools",
    "litellm",
    "bedrock-agentcore-starter-toolkit>=0.3.5",
    "bedrock-agentcore>=1.6.2",
    "aws-opentelemetry-distro>=0.17.0",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
]

[project.scripts]
stockresearch = "stockresearch.main:run"
run_crew = "stockresearch.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
